A lot of updates related to authorization
