# src/main/java/com/mishchuk/autotrade/controller/dto/RefreshTokenRequestDto.java
@@ -2,14 +2,10 @@ package com.mishchuk.autotrade.controller.dto;
 
 import com.fasterxml.jackson.databind.PropertyNamingStrategies;
 import com.fasterxml.jackson.databind.annotation.JsonNaming;
-import lombok.Builder;
 import lombok.Data;
 
 @Data
-@Builder
 @JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
-public class AuthTokenResponseDto {
-    private final String accessToken;
-    private final String refreshToken;
-    private final String tokenType = "bearer";
+public class RefreshTokenRequestDto {
+    private String refreshToken;
 }
