# src/main/java/com/mishchuk/autotrade/controller/dto/ResendVerificationRequestDto.java
@@ -1,0 +1,8 @@
+package com.mishchuk.autotrade.controller.dto;
+
+import lombok.Data;
+
+@Data
+public class ResendVerificationRequestDto {
+    private String email;
+}
